--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-    "build":[{
+    "build":{
         "src" : "backend_pistigreen/wsgi.py",
         "use" :"@vercel/python",
         "config": {"maxLambdaSize":"15mb","runtime":"python3.12"}
         
-    }],
+    },
     "routes":[{
         "src":"/(.*)",
         "dest":"backend_pistigreen/wsgi.py"
